WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
198280
REGRESSION (
r238524
): SVG textPath cannot be rendered when <text> element is referred by <use> element
https://bugs.webkit.org/show_bug.cgi?id=198280
Summary
REGRESSION (r238524): SVG textPath cannot be rendered when <text> element is ...
Seiji Ohmori
Reported
2019-05-27 18:02:38 PDT
Created
attachment 370709
[details]
Example, <textPath> cannot be rendered by WebkitGTK 2.24 When <text> element is referred by <use> element and the <text> element has <textPath> element as a child, the text data cannot be rendered by WebkitGTK 2.24. WebkitGTK 2.22 could render it. Chrome, Firefox and IE can render it. Please could you confirm this behavior is a bug?
Attachments
Example, <textPath> cannot be rendered by WebkitGTK 2.24
(648 bytes, image/svg+xml)
2019-05-27 18:02 PDT
,
Seiji Ohmori
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Said Abou-Hallawa
Comment 1
2019-05-28 12:57:52 PDT
This bug can be reproduced on macOS as well. It is regression from <
https://trac.webkit.org/changeset/238524
>.
Radar WebKit Bug Importer
Comment 2
2019-05-28 12:58:09 PDT
<
rdar://problem/51190665
>
Ahmad Saleem
Comment 3
2022-07-14 13:43:33 PDT
I am able to reproduce this in Safari 15.5 / Safari Technical Preview 148 using attached test case. All other browsers render text over the line fine. Thanks!
Ryosuke Niwa
Comment 4
2022-07-16 12:15:32 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/2486
Ryosuke Niwa
Comment 5
2022-07-16 12:19:11 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/2491
EWS
Comment 6
2022-07-16 21:56:17 PDT
Committed
252547@main
(72c9014cf926): <
https://commits.webkit.org/252547@main
> Reviewed commits have been landed. Closing PR #2491 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug