Cherry-pick 72c9014cf926. rdar://problem/51190665

REGRESSION (r238524): SVG textPath cannot be rendered when <text> element is referred by <use> element
    https://bugs.webkit.org/show_bug.cgi?id=198280

    Reviewed by Myles C. Maxfield.

    The bug was caused by targetElementFromIRIString looking for a matching element in the use element's
    UA shadow tree instead of the outer tree which defined the content of use element's shadow tree.

    Fixed the bug by looking for the matching element in the tree that contains the use element instead.

    * LayoutTests/svg/dom/use-element-reference-within-use-shadow-tree-expected.html: Added.
    * LayoutTests/svg/dom/use-element-reference-within-use-shadow-tree.html: Added.
    * Source/WebCore/svg/SVGURIReference.cpp:
    (WebCore::SVGURIReference::targetElementFromIRIString): Fixed the bug.

    Canonical link: https://commits.webkit.org/252547@main

Canonical link: https://commits.webkit.org/252432.77@safari-7614-branch